# rtimulib_ros

./: CMakeLists.txt  package.xml
config/: RTIMULib.ini
launch/: rtimu_ros.launch
src/: RTIMU_Node.cpp  RTIMU_Node.h  rtimu_node.cpp
